--- a/.src/Form/DVBTuner.form
+++ b/.src/Form/DVBTuner.form
@@ -11,6 +11,7 @@
     MoveScaled(1,3,81,4)
     { LabelFrequencies Label
       MoveScaled(0,1,17,3)
+      AutoResize = True
       Text = ("Tuning Data")
     }
     { ComboBox1 ComboBox
