--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -1208,6 +1208,7 @@
         }
         { NoParse30 HBox
           MoveScaled(1,17,50,4)
+          Enabled = False
           Spacing = True
           { HighlightCHK CheckBox
             MoveScaled(1,0,48,4)
