--- a/.src/Form/HotKeys.form
+++ b/.src/Form/HotKeys.form
@@ -31,11 +31,19 @@
     Count = 2
     Index = 0
     Text = ("Local Hotkeys")
-    { HotKeysGrid GridView
-      MoveScaled(0,0,60,42)
+    { Panel1 Panel
+      MoveScaled(1,3,51,35)
+      Background = Color.TextBackground
       Expand = True
-      Mode = Select.Single
-      Header = GridView.Both
+      Arrangement = Arrange.Fill
+      Border = Border.Plain
+      { HotKeysGrid GridView
+        MoveScaled(0,0,50,34)
+        Expand = True
+        Mode = Select.Single
+        Header = GridView.Both
+        Border = False
+      }
     }
     { HBox1 HBox
       MoveScaled(0,42,59,6)
@@ -70,11 +78,19 @@
     }
     Index = 1
     Text = ("Global Hotkeys")
-    { GlobalHotKeysGrid GridView
-      MoveScaled(0,0,60,42)
+    { Panel2 Panel
+      MoveScaled(0,2,55,38)
+      Background = Color.TextBackground
       Expand = True
-      Mode = Select.Single
-      Header = GridView.Both
+      Arrangement = Arrange.Fill
+      Border = Border.Plain
+      { GlobalHotKeysGrid GridView
+        MoveScaled(0,0,54,37)
+        Expand = True
+        Mode = Select.Single
+        Header = GridView.Both
+        Border = False
+      }
     }
     { HBox2 HBox
       MoveScaled(0,42,60,6)
