Hotkeysgrid now has correct row height

--- a/.src/Form/HotKeys.form
+++ b/.src/Form/HotKeys.form
@@ -41,6 +41,7 @@
         MoveScaled(0,0,50,34)
         Expand = True
         Mode = Select.Single
+        ShowCursor = True
         Header = GridView.Both
         Border = False
       }
@@ -88,6 +89,7 @@
         MoveScaled(0,0,54,37)
         Expand = True
         Mode = Select.Single
+        ShowCursor = True
         Header = GridView.Both
         Border = False
       }
