Manual rows update is now faster and with no glitches. + getvalue() fix

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -754,6 +754,7 @@
             MoveScaled(4,1,30,18)
             Tracking = True
             ToolTip = ("Drag'n drop files or media links to add them,")
+            Drop = True
             Expand = True
             Mode = Select.Multiple
             Grid = False
