--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -1163,7 +1163,7 @@
           MoveScaled(0,2,50,0.5714)
         }
         { NoParse29 HBox
-          MoveScaled(1,3,50,4)
+          MoveScaled(1,2,50,4)
           Spacing = True
           { ShowCoversInListChk CheckBox
             MoveScaled(1,0,47,4)
@@ -1173,7 +1173,7 @@
           }
         }
         { NoParse41 HBox
-          MoveScaled(1,7,50,4)
+          MoveScaled(1,6,50,4)
           Spacing = True
           { ShowThumbsCHK CheckBox
             MoveScaled(0,0,47,4)
@@ -1183,7 +1183,7 @@
           }
         }
         { NoParseStyle3 HBox
-          MoveScaled(1,11,50,4)
+          MoveScaled(1,10,50,4)
           Spacing = True
           { FontLabel3 Label
             MoveScaled(1,1,17,3)
@@ -1195,19 +1195,43 @@
             Expand = True
           }
           { !IconWidthCombobox ComboBox
-            MoveScaled(27,0,10,3)
+            MoveScaled(35,0,10,3)
             #Public = True
             ReadOnly = True
             List = [("16"), ("24"), ("32"), ("48"), ("64"), ("96"), ("128"), ("160")]
             Text = ("32")
           }
           { BackResetButton4 ToolButton
-            MoveScaled(41,1,4,4)
+            MoveScaled(45,0,4,4)
+            Picture = Picture["icon:/16/clear"]
+          }
+        }
+        { NoParseStyle9 HBox
+          MoveScaled(1,14,50,4)
+          Spacing = True
+          { FontLabel8 Label
+            MoveScaled(1,1,17,3)
+            AutoResize = True
+            Text = ("Albums view icon size")
+          }
+          { VBox6 VBox
+            MoveScaled(21,0,3,4)
+            Expand = True
+          }
+          { !IconWidthAlbums ComboBox
+            MoveScaled(35,0,10,3)
+            #Public = True
+            ReadOnly = True
+            List = [("48"), ("64"), ("96"), ("128"), ("160"), ("224"), ("256")]
+            Text = ("64")
+          }
+          { BackResetButton5 ToolButton
+            MoveScaled(45,0,4,4)
             Picture = Picture["icon:/16/clear"]
           }
         }
         { NoParse30 HBox
-          MoveScaled(1,17,50,4)
+          MoveScaled(1,19,50,4)
           Spacing = True
           { HighlightCHK CheckBox
             MoveScaled(1,0,48,4)
@@ -1217,7 +1241,7 @@
           }
         }
         { NOPARSESEPARATOR1 Separator
-          MoveScaled(1,22,50,0.5714)
+          MoveScaled(1,23,50,0.5714)
         }
         { NoParseStyle1 HBox
           MoveScaled(1,24,50,4)
