--- a/.src/Form/AllOptions.form
+++ b/.src/Form/AllOptions.form
@@ -7,6 +7,7 @@
   Persistent = True
   Resizable = False
   Utility = True
+  SkipTaskbar = True
   Arrangement = Arrange.Vertical
   AutoResize = True
   { OkBTN2 Button
